Add MyKasGweh project to projects page

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Projects oleh Fardan Azzuhri - Dompetku, MyCatatanGweh, dan project lainnya" />
+    <meta name="description" content="Projects oleh Fardan Azzuhri - Dompetku, MyCatatanGweh, MyKasGweh, dan project lainnya" />
     <title>Projects | Fardan.Dev</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👨‍💻</text></svg>" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -114,6 +114,37 @@
             🔗 Lihat Demo
           </a>
           <a href="https://github.com/fardaaannn/mycatatangweh" target="_blank" class="btn-code">
+            📂 Source Code
+          </a>
+        </div>
+      </div>
+      
+      <!-- Project 3: MyKasGweh -->
+      <div class="showcase-card">
+        <div class="showcase-header">
+          <div class="showcase-icon">💰</div>
+          <div class="showcase-status live">🟢 Live</div>
+        </div>
+        <div class="showcase-content">
+          <h2>MyKasGweh</h2>
+          <p class="showcase-desc">Aplikasi pencatatan kas sederhana berbasis web modern menggunakan Next.js. Cocok untuk mengelola pemasukan dan pengeluaran kas harian.</p>
+          <div class="showcase-features">
+            <span>✅ Catat Kas</span>
+            <span>✅ Laporan</span>
+            <span>✅ Modern UI</span>
+            <span>✅ Responsive</span>
+          </div>
+          <div class="showcase-tech">
+            <span class="tech-tag html">Next.js</span>
+            <span class="tech-tag css">CSS</span>
+            <span class="tech-tag js">JavaScript</span>
+          </div>
+        </div>
+        <div class="showcase-actions">
+          <a href="https://fardaaannn.github.io/MyKasGweh/" target="_blank" class="btn-live">
+            🔗 Lihat Demo
+          </a>
+          <a href="https://github.com/fardaaannn/MyKasGweh" target="_blank" class="btn-code">
             📂 Source Code
           </a>
         </div>
