--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section class="hero">
       <div class="hero-content">
         <div class="hero-text">
-          <p>Halo, Selamat Datang!</p>
+          <p>Yoo</p>
           <h1 class="hero-title">Aku <span class="teks-sorotan">Fardan Azzuhri</span></h1>
           <p class="hero-subtitle">
             Seorang <span id="typing-text" class="typing-text">Web Developer</span><span class="typing-cursor"></span> 
