update link kas

--- a/projects.html
+++ b/projects.html
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="showcase-actions">
-          <a href="https://fardaaannn.github.io/MyKasGweh/" target="_blank" class="btn-live">
+          <a href="https://mykasgweh.vercel.app/" target="_blank" class="btn-live">
             🔗 Lihat Demo
           </a>
           <a href="https://github.com/fardaaannn/MyKasGweh" target="_blank" class="btn-code">
