--- a/profil.html
+++ b/profil.html
@@ -67,7 +67,7 @@
           />
         </p>
         <p>
-          Aku masih pemula, puh 🚀
+          Aku masih pemula, puh
         </p>
       </div>
       
