--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
         <a href="projects.html">Projects</a>
         <a href="kontak.html">Kontak</a>
       </div>
+      <div>
+        <audio id="audioKu">
+            <source src="Different Heaven - Safe And Sound _ House _ NCS - Copyright Free Music.mp3" type="audio/mpeg">
+            Browser kamu tidak mendukung elemen audio.
+        </audio>
+
+        <button id="tombolPutar" class="tombol-musik" onclick="putarAtauJeda()">🎵</button>
+
+          <script src="script.js"></script>
+      </div>
       <div class="nav-right">
         <label class="theme-switch">
           <input type="checkbox" id="theme-toggle">
