ubah title audio jadi bocil Windah

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <source src="Different Heaven - Safe And Sound _ House _ NCS - Copyright Free Music.mp3" type="audio/mpeg">
         </audio>
 
-        <button id="tombolPutar" class="tombol-musik" onclick="putarAtauJeda()" title="Putar/Jeda Musik">🎵</button>
+        <button id="tombolPutar" class="tombol-musik" onclick="putarAtauJeda()" title="Musik bocil Windah">🎵</button>
 
         <label class="theme-switch">
           <input type="checkbox" id="theme-toggle">
