--- a/projects.html
+++ b/projects.html
@@ -162,7 +162,7 @@
         </div>
         <div class="showcase-actions">
           <a
-            href="https://github.com/fardaaannn/mykeuangangweh/"
+            href="https://fardaaannn.github.io/mykeuangangweh/"
             target="_blank"
             class="btn-live"
           >
